# dyno-viewer

./: .gitignore  AGENTS.md  LICENSE  README.md  generated-poetry-sources.json  org.flatpak.dyna-cli.metainfo.xml  org.flatpak.dyna-cli.yaml  org.flatpak.dyna_cli.metainfo.xml  org.flatpak.dyna_cli.yaml  org.flatpak.dyno-viewer.metainfo.xml  org.flatpak.dyno-viewer.yaml  pyproject.toml  python3-requirements.json
.github/: dependabot.yml
.github/workflows/: build-flatpak.yml  pr-tests.yml  release-python.yml  update_dependencies.yml
docs/: architecture.md  testing-textual.md
dyn_cli/: app.py  markdown.py
dyn_cli/aws/: ddb.py  sts.py
dyna_cli/: __main__.py  app.py  app_workers.py
dyna_cli/aws/: ddb.py  session.py
dyna_cli/components/: query_select.py  screens.py  table.py  types.py
dyna_cli/components/css/: filterQueryInput.css  query.css  queryInput.css  queryScreen.css
dyna_cli/components/query/: filter_query.py  key_query.py  sort_key_filter.py
dyna_cli/components/screens/: __init__.py  error.py  profile_select.py  query.py  region_select.py  table_select.py  types.py
dyna_cli/util/: __init__.py  util.py
dyno_viewer/: __main__.py  alembic.ini  app.py  app_types.py  app_workers.py  constants.py  messages.py  models.py
dyno_viewer/aws/: ddb.py  session.py
dyno_viewer/components/: dyn_table.py  table.py
dyno_viewer/components/css/: query.css  table.css  table.tcss  tableOptions.tcss
dyno_viewer/components/help/: help-doc.md
dyno_viewer/components/query/: filter_query.py  key_filter.py  key_query.py  sort_key_filter.py
dyno_viewer/components/screens/: __init__.py  app_options.py  confirm_dialogue.py  create_new_table_viewer_session.py  create_rename_session.py  create_saved_query.py  create_session_group.py  error.py  file_chooser.py  help.py  item_info.py  profile_select.py  query.py  query_history.py  query_history_browser.py  reaname_session_group.py  region_select.py  saved_querys.py  saved_querys_browser.py  select_session_group.py  session_browser.py  table_query.py  table_select.py  table_session_browser.py  table_session_picker.py  table_view.py  table_view_mode.py  table_view_options.py  table_viewer_sessions_select.py  view_row_item.py
dyno_viewer/db/: data_store.py  manager.py  models.py  queries.py  utils.py
dyno_viewer/db/migration/: env.py
dyno_viewer/db/migration/versions/: 85b4660d3edc_init.py
dyno_viewer/util/: __init__.py  csv.py  json.py  path.py  util.py
scripts/: build_app.py  ci_flatpak_build.py  commands.py  ddb-key-grouping.ipynb  flatpak-pip-generator.py  flatpak-poetry-generator.py  flatpak-runner.sh  migrate_db.py  test_db.py  test_sqlite_db_store.py  update_dependencies.py
tests/: common.py  conftest.py
tests/fixtures/: ddb_tables.py  moto.py  setup.py
tests/manual/: bootstrap-aws-test-data.ipynb
tests/unit/: test_app.py  test_data_dyn_table.py  test_data_table_issue.py  test_data_table_manager.py  test_dyn_table.py  test_filter_query_input.py  test_key_query_input.py  test_profile_select_screen.py  test_query_input.py  test_query_screen.py  test_region_select_screen.py  test_simulate_datatable_updated_by_other_widget.py  test_table_select_screen.py
tests/unit/app/: test_select_table.py
tests/unit/aws/: test_ddb.py
tests/unit/query/: test_filter_query.py  test_key_filter.py  test_key_query.py  test_sort_key_query.py
tests/unit/screens/: test_app_options.py  test_create_saved_query.py  test_create_session_group.py  test_file_chooser.py  test_help_screen.py  test_item_info.py  test_profile_select.py  test_profile_select_screen.py  test_query_history_browser.py  test_query_history_screen.py  test_query_history_viewer.py  test_query_screen.py  test_region_select.py  test_region_select_screen.py  test_saved_queries_screen.py  test_saved_querys_browser.py  test_select_session_group.py  test_session_browser.py  test_table_query_viewer.py  test_table_screen.py  test_table_select.py  test_table_select_screen.py  test_table_session_browser.py  test_table_session_picker.py  test_table_view.py  test_table_view_mode.py  test_table_viewer_sessions_select.py  test_view_row_item.py
tests/unit/snapshots/test_data_dyn_table/test_pk_sk_data/data0/: data_rows.json
tests/unit/snapshots/test_data_dyn_table/test_pk_sk_data/data1/: data_rows.json
tests/unit/snapshots/test_data_dyn_table/test_pk_sk_gsi_data/data0/: data_rows.json
tests/unit/snapshots/test_data_dyn_table/test_pk_sk_gsi_data/data1/: data_rows.json
tests/unit/snapshots/test_data_dyn_table/test_pk_sk_gsi_data/data2/: data_rows.json
