[tool.poetry]
name = "dyno-viewer"
version = "0.2.0"
description = ""
authors = ["Rowan Self <piesrule123@gmail.com>"]
readme = "README.md"
packages = [{include = "dyno_viewer"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.105"
simplejson = "^3.19.1"
dynamodb-json = "^1.3"
pyclip = "^0.7.0"
textual = ">=0.24.1,<0.60.0"


[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
ipykernel = "^6.22.0"
pytest = ">=7.3.1,<9.0.0"
moto = {extras = ["all"], version = "^4.1.9"}
pytest-aiohttp = "^1.0.4"
pandas = ">=1.5.3,<3.0.0"
pytest-mock = "^3.10.0"
jupyterlab = ">=3.6.3,<5.0.0"
pytest-xdist = "^3.3.0"
toml = "^0.10.2"
poethepoet = ">=0.20,<0.26"
textual-dev = "^1.0.1"



[tool.poe.tasks]
build_local.script = 'scripts.commands:build_local'
test = 'pytest -n auto'
dev = 'textual run --dev dyno_viewer/__main__.py'
dev-console = 'textual console'

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poetry.scripts]
dyno-viewer  = 'dyno_viewer.app:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
