[tool.poetry]
name = "dyno-viewer"
version = "0.2.0"
description = ""
authors = ["Rowan Self <piesrule123@gmail.com>"]
readme = "README.md"
packages = [{include = "dyno_viewer"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.40.63"
simplejson = "^3.20.2"
dynamodb-json = "^1.3"
pyclip = "^0.7.0"
textual = ">=0.24.1,<6.5.0"
aiosqlite = "^0.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}


[tool.poetry.group.dev.dependencies]
black = ">=23.3,<26.0"
ipykernel = "^6.31.0"
pytest = ">=7.3.1,<9.0.0"
moto = {extras = ["all"], version = "^5.1.15"}
pytest-aiohttp = "^1.0.4"
pandas = ">=1.5.3,<3.0.0"
pytest-mock = "^3.15.1"
jupyterlab = ">=3.6.3,<5.0.0"
pytest-xdist = "^3.8.0"
toml = "^0.10.2"
poethepoet = ">=0.20,<0.38"
textual-dev = "^1.8.0"


isort = "^6.1.0"
pylint = "^3.3.9"
time-machine = "^2.19.0"
pytest-textual-snapshot = "^1.1.0"
[tool.poe.tasks]
build_local.script = 'scripts.commands:build_local'
test = 'pytest -n auto'
dev = 'textual run --dev dyno_viewer/__main__.py'
dev-server = 'textual serve --dev dyno_viewer/__main__.py'
dev-console = 'textual console'
pylint = { cmd = "pylint dyno_viewer", help = "Run pylint on codebase" }
check_black = { cmd = "black dyno_viewer --check" }
check_imports = { cmd = "isort --check-only --profile=black dyno_viewer" }
black = { cmd = "black dyno_viewer", help = "Run black on codebase" }
isort = { cmd = "isort --profile=black dyno_viewer", help = "Run isort on codebase" }
lint = ["check_black", "check_imports", "pylint"]
lint-fix = ["black", "isort"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.poetry.scripts]
dyno-viewer  = 'dyno_viewer.app:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Same as Black.
line-length = 88
target-version = ["py38"]

[tool.pylint."messages control"]
disable = [
    "arguments-differ",
    "attribute-defined-outside-init",
    "blacklisted-name",
    "duplicate-code",
    "fixme",
    "import-error",
    "no-member",
    "no-name-in-module",
    "protected-access",
    "stop-iteration-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "abstract-method",
    "chained-comparison",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "global-statement",
    "missing-docstring",
    "missing-function-docstring",
    "redefined-argument-from-local",
    "redefined-outer-name",
    "reimported",
    "too-many-ancestors",
    "unexpected-special-method-signature",
    "consider-using-from-import",
    "try-except-raise",
    "line-too-long",
    "redefined-builtin",
    "unsubscriptable-object",
    "import-outside-toplevel",
]


